# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2012-07-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Tweaks to list_pg to support external usage

2012-07-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add nodefinder configuration for further testing

2012-07-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the ZeroMQ CloudI job termination so that sockets are always closed
    * Fix an error in the ZeroMQ tests configuration
    * Update epgsql to latest version
    * Add ZeroMQ 3 along with a configuration parameter to specify which 
      version of ZeroMQ to use and compile the proper version of erlzmq to
      provide the same ZeroMQ interface
    * Add nodefinder as a dependency
    * Make cloudi_pool_sup startup synchronous to prevent any problems with
      supervisor dependencies (at the same supervisor level)

2012-06-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.0.0 (beta) released
    * Add loadtest of http_req test to show language performance with
      20k connections and 1 OS process
    * Improvements to cloudi_job_http to handle heavy load

2012-06-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update uuid and switch to os:timestamp/0 to time HTTP requests

2012-06-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix/Improvements for AWS deployment

2012-05-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Updated FAQ
    * Add the virtual host option ("use_host_prefix") to cloudi_job_http

2012-05-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update uuid, so that newer MAC addresses are not an issue

2012-04-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a few unsigned constants in the C/C++ CloudI API and the msg_size test
    * Get CloudI building with Travis (http://travis-ci.org/#!/okeuday/CloudI)

2012-04-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 0.2.0rc2 (beta) released