@@ -1,4 +1,5 @@
-{sub_dirs, ["external/jsx",
+{sub_dirs, ["lib/cloudi",
+            "external/jsx",
             "external/ecouchdb",
             "external/ememcached",
             "external/emysql",
@@ -7,8 +8,8 @@
             "external/misultin",
             "external/nodefinder/nodefinder",
             "external/nodefinder/ec2nodefinder",
-            "external/nodefinder/combonodefinder",
-            "lib/cloudi"]}.
+            "external/nodefinder/combonodefinder"]}.
+{edoc_opts, [{preprocess, true}]}.
 {erl_opts, [{d, 'ERLANG_OTP_VER_@ERLANG_OTP_VER@'},
             {d, 'ERLANG_OTP_VER_R@ERLANG_OTP_VER_MAJOR@'},
             warnings_as_errors,
